k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-app-service
spec:
  type: ClusterIP
  selector:
    app: eks-app
  ports:
    - port: 80
      targetPort: 3000
